--- a/QuanlyDuAn/Application_Main/Properties/Resources.resx
+++ b/QuanlyDuAn/Application_Main/Properties/Resources.resx
@@ -124,4 +124,7 @@
   <data name="banner2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\pict\banner2.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="iconcheck" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\pict\iconcheck.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
